--- a/templates/top_ten.html
+++ b/templates/top_ten.html
@@ -1,17 +1,17 @@
 {% extends 'base.html' %}
-{% block title %}Search Results{% endblock %}
+{% block title %}Top Ten Customers{% endblock %}
 {% block content %}
 
-  <h1>Search Results</h1>
+  <h1>Top Ten Customers</h1>
 
-  <ul style="column-count: 4">
-    {% for customer in customers %}
+  <ol style="column-count: 4">
+    {% for customer in topTen %}
       <li>
         <a href="/{{ customer.id }}/">
           {{ customer.fullName() }}
         </a>
       </li>
     {% endfor %}
-  </ul>
+  </ol>
 
 {% endblock %}
